load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")
load("@fly//scripts/bazel/rules:glslang.bzl", "glsl_shader")
load("@fly//scripts/bazel/rules:copy_files_to_directory.bzl", "copy_files_to_directory")
load("@fly//scripts/bazel/rules:common.bzl", "copy_vulkan_layers", "copy_molten_vk")

copy_vulkan_layers()
copy_molten_vk()

glsl_shader(
    name = "screen_quad.vert.spv",
    src = "screen_quad.vert",
)

glsl_shader(
    name = "screen_quad.frag.spv",
    src = "screen_quad.frag",
    deps = [
        "//demos/common:glsl_bindless",
    ],
)

glsl_shader(
    name = "transmittance_lut.comp.spv",
    src = "transmittance_lut.comp",
    deps = [
        "//demos/common:glsl_bindless",
    ],
)

cc_binary(
    name = "app",
    srcs = [
        "main.cpp",
    ],
    deps = [
        "//src/rhi:context",
        "//src/utils:utils",
    ],
    data = [
        ":screen_quad.vert.spv",
        ":screen_quad.frag.spv",
        ":transmittance_lut.comp.spv",
    ] + select({
        "@fly//scripts/bazel/build_type:release": [],
        "//conditions:default": [
            ":copy_vulkan_validation_layer",
        ],
    }) + select({
        "@platforms//os:osx": [
            ":copy_molten_vk",
	],
        "//conditions:default": [],
    }),
)
    