load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "simple_camera_fps",
    hdrs = [
        "simple_camera_fps.h"
    ],
    srcs = [
        "simple_camera_fps.cpp"
    ],
    deps = [
        "//src/math:math",
        "@glfw//:glfw",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "scene",
    hdrs = [
        "scene.h",
    ],
    srcs = [
        "scene.cpp",
    ],
    deps = [
        "//src/math:math",
        "//src/assets:import_gltf",
        "//src/assets:import_image",
        "//src/rhi:context",
    ],
    visibility = ["//visibility:public"],
)
    
