load("@rules_cc//cc:defs.bzl", "cc_library")
load("@helios//scripts/bazel/rules:glslang.bzl", "glsl_library")

glsl_library(
    name = "glsl_bindless",
    hdrs = [
        "bindless.glsl",
    ],
    visibility = ["//visibility:public"]
)

cc_library(
    name = "simple_camera_fps",
    hdrs = [
        "simple_camera_fps.h"
    ],
    srcs = [
        "simple_camera_fps.cpp"
    ],
    deps = [
        "//src/math:math",
        "@glfw//:glfw",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "scene",
    hdrs = [
        "scene.h",
    ],
    srcs = [
        "scene.cpp",
    ],
    deps = [
        "//src/math:math",
        "//src/assets:import_gltf",
        "//src/assets:import_image",
        "//src/assets:import_spv",
        "//src/rhi:context",
    ],
    visibility = ["//visibility:public"],
)
    
