load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")
load("@fly//scripts/bazel/rules:copy_files_to_directory.bzl", "copy_files_to_directory")
load("@fly//scripts/bazel/rules:glslang.bzl", "glsl_shader")
load("@fly//scripts/bazel/rules:cook.bzl", "cook_image")

copy_files_to_directory(
    name = "copy_vulkan_validation_layer",
    srcs = [
        "@vulkan_validation_layers//:VK_LAYER_KHRONOS_validation_json",
        "@vulkan_validation_layers//:VK_LAYER_KHRONOS_validation",
    ],
    output_directory = ".",
)

cook_image(
    name = "cook_cesium_logo",
    codec = "bc1",
    inputs = [
        "@gltf_sample_models//:2.0/BoxTextured/glTF/CesiumLogoFlat.png",
    ],
)

copy_files_to_directory(
    name = "copy_molten_vk",
    srcs = [
        "@molten_vk//:icd",
        "@molten_vk//:molten_vk",
    ],
    output_directory = ".",
)

copy_files_to_directory(
    name = "copy_scene_data",
    srcs = [
        "@gltf_sample_models//:box_textured_scene",
    ],
    output_directory = ".",
)

config_setting(
    name = "release_build",
    values = {
        "compilation_mode": "opt",
    },
)

glsl_shader(
    name = "cubes.vert.spv",
    src = "cubes.vert",
    deps = [
        "//demos/common:glsl_bindless"
    ],
)

glsl_shader(
    name = "cubes.frag.spv",
    src = "cubes.frag",
    deps = [
        "//demos/common:glsl_bindless"
    ],
)

cc_binary(
    name = "app",
    srcs = [
        "main.cpp",
    ],
    deps = [
        "//src/rhi:context",
        "//src/assets:import_image",
        "//src/utils:utils",
        "//demos/common:simple_camera_fps",
    ],
    data = [
        ":cubes.frag.spv",
        ":cubes.vert.spv",
        ":copy_scene_data",
        ":cook_cesium_logo",
    ] + select({
        ":release_build": [
        ],
        "//conditions:default": [
            ":copy_vulkan_validation_layer",
        ],
    }) + select({
        "@platforms//os:osx": [
            ":copy_molten_vk",
	],
        "//conditions:default": [],
    }),
)

