load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")
load("@fly//scripts/bazel/rules:glslang.bzl", "glsl_shader")
load("@fly//scripts/bazel/rules:cook.bzl", "cook_images")
load("@fly//scripts/bazel/rules:common.bzl", "copy_vulkan_layers", "copy_molten_vk")
load("@fly//scripts/bazel/rules:copy_files_to_directory.bzl", "copy_files_to_directory")

copy_vulkan_layers()
copy_molten_vk()

cook_images(
    name = "cook_cesium_logo",
    inputs = [
        "@gltf_sample_models//:2.0/BoxTextured/glTF/CesiumLogoFlat.png",
    ],
    outputs = [
        "CesiumLogoFlat.fbc1",
    ],
    generate_mips = True,
)

copy_files_to_directory(
    name = "copy_scene_data",
    srcs = [
        "@gltf_sample_models//:box_textured_scene",
    ],
    output_directory = ".",
)

glsl_shader(
    name = "cubes.vert.spv",
    src = "cubes.vert",
    deps = [
        "//demos/common:glsl_bindless"
    ],
)

glsl_shader(
    name = "cubes.frag.spv",
    src = "cubes.frag",
    deps = [
        "//demos/common:glsl_bindless"
    ],
)

cc_binary(
    name = "app",
    srcs = [
        "main.cpp",
    ],
    deps = [
        "//src/rhi:context",
        "//src/assets:import_image",
        "//src/utils:utils",
        "//demos/common:simple_camera_fps",
    ],
    data = [
        ":cubes.frag.spv",
        ":cubes.vert.spv",
        ":copy_scene_data",
        ":cook_cesium_logo",
    ] + select({
        "@fly//scripts/bazel/build_type:release": [
        ],
        "//conditions:default": [
            ":copy_vulkan_validation_layer",
        ],
    }) + select({
        "@platforms//os:osx": [
            ":copy_molten_vk",
	],
        "//conditions:default": [],
    }),
)

