load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")
load("@fly//scripts/bazel/rules:glslang.bzl", "glsl_shader")
load("@fly//scripts/bazel/rules:cook.bzl", "cook_meshes", "cook_images")
load("@fly//scripts/bazel/rules:common.bzl", "copy_vulkan_layers", "copy_molten_vk")

copy_vulkan_layers()
copy_molten_vk()

cook_images(
    name = "cook_skybox",
    inputs = [
        "@ambientcg//:DayEnvironmentHDRI020_4K-HDR.exr",
    ],
    outputs = [
        "day.exr",
    ],
    generate_mips = False,
    eq2cube = True,
)

cook_meshes(
    name = "cook_dragon_mesh",
    inputs = [
        "@casual_effects//:dragon/dragon.obj",
    ],
    outputs = [
        "dragon.fmesh",
    ],
    scale = "5.0",
    flip_forward = True,
    flip_winding_order = True,
)

glsl_shader(
    name = "lit.vert.spv",
    src = "lit.vert",
    deps = [
        "//demos/common:glsl_bindless"
    ],
)

glsl_shader(
    name = "lit.frag.spv",
    src = "lit.frag",
    deps = [
        "//demos/common:glsl_bindless"
    ],
)

glsl_shader(
    name = "hzb_downsample.frag.spv",
    src = "hzb_downsample.frag",
    deps = [
        "//demos/common:glsl_bindless",
    ],
)
    
glsl_shader(
    name = "main_cull.comp.spv",
    src = "main_cull.comp",
    deps = [
        "//demos/common:glsl_bindless",
    ],
)

glsl_shader(
    name = "occluder_cull.comp.spv",
    src = "occluder_cull.comp",
    deps = [
        "//demos/common:glsl_bindless",
    ],
)

glsl_shader(
    name = "prefix_sum.comp.spv",
    src = "prefix_sum.comp",
    deps = [
        "//demos/common:glsl_bindless",
    ],
)

glsl_shader(
    name = "remap.comp.spv",
    src = "remap.comp",
    deps = [
        "//demos/common:glsl_bindless",
    ],
)

glsl_shader(
    name = "skybox.vert.spv",
    src = "skybox.vert",
    deps = [
        "//demos/common:glsl_bindless",
    ],
)

glsl_shader(
    name = "skybox.frag.spv",
    src = "skybox.frag",
    deps = [
        "//demos/common:glsl_bindless",
    ],
)

glsl_shader(
    name = "radiance_projection.comp.spv",
    src = "radiance_projection.comp",
    deps = [
        "//demos/common:glsl_bindless",
    ],
)

glsl_shader(
    name = "brdf_integration_lut.comp.spv",
    src = "brdf_integration_lut.comp",
    deps = [
        "//demos/common:glsl_bindless",
    ],
)

glsl_shader(
    name = "prefilter.vert.spv",
    src = "prefilter.vert",
    deps = [
        "//demos/common:glsl_bindless",
    ],
)

glsl_shader(
    name = "prefilter.frag.spv",
    src = "prefilter.frag",
    deps = [
        "//demos/common:glsl_bindless",
    ],
)

cc_binary(
    name = "app",
    srcs = [
        "main.cpp",
    ],
    deps = [
        "@imgui//:imgui",
        "//src/rhi:context",
        "//src/utils:utils",
        "//src/assets/geometry:mesh",
        "//demos/common:simple_camera_fps",
    ],
    data = [
        ":cook_dragon_mesh",
        ":cook_skybox",
        ":lit.vert.spv",
        ":lit.frag.spv",
        ":main_cull.comp.spv",
        ":occluder_cull.comp.spv",
        ":prefix_sum.comp.spv",
        ":remap.comp.spv",
        ":radiance_projection.comp.spv",
        ":brdf_integration_lut.comp.spv",
        ":skybox.vert.spv",
        ":skybox.frag.spv",
        ":prefilter.vert.spv",
        ":prefilter.frag.spv",
        ":hzb_downsample.frag.spv",
    ] + select({
        "@fly//scripts/bazel/build_type:release": [
        ],
        "//conditions:default": [
            ":copy_vulkan_validation_layer",
        ],
    }) + select({
        "@platforms//os:osx": [
            ":copy_molten_vk",
	],
        "//conditions:default": [],
    }),
)

