load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")
load("@fly//scripts/bazel/rules:glslang.bzl", "glsl_shader")
load("@fly//scripts/bazel/rules:common.bzl", "copy_vulkan_layers", "copy_molten_vk")
load("@fly//scripts/bazel/rules:copy_files_to_directory.bzl", "copy_files_to_directory")

copy_vulkan_layers()
copy_molten_vk()

copy_files_to_directory(
    name = "copy_scene_data",
    srcs = [
        "@gltf_sample_models//:sponza_scene",
    ],
    output_directory = ".",
)

glsl_shader(
    name = "unlit.vert.spv",
    src = "unlit.vert",
    deps = [
        "//demos/common:glsl_bindless"
    ],
)

glsl_shader(
    name = "unlit.frag.spv",
    src = "unlit.frag",
    deps = [
        "//demos/common:glsl_bindless"
    ],
)

cc_binary(
    name = "app",
    srcs = [
        "main.cpp",
    ],
    deps = [
        "//src/rhi:context",
        "//demos/common:scene",
        "//demos/common:simple_camera_fps",
    ],
    data = [
        ":unlit.frag.spv",
        ":unlit.vert.spv",
        ":copy_scene_data",
    ] + select({
        "@fly//scripts/bazel/build_type:release": [
        ],
        "//conditions:default": [
            ":copy_vulkan_validation_layer",
        ],
    }) + select({
        "@platforms//os:osx": [
            ":copy_molten_vk",
	],
        "//conditions:default": [],
    }),
)

