load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")
load("@fly//scripts/bazel/rules:glslang.bzl", "glsl_shader")
load("@fly//scripts/bazel/rules:cook.bzl", "cook_scenes")
load("@fly//scripts/bazel/rules:common.bzl", "copy_vulkan_layers", "copy_molten_vk")

copy_vulkan_layers()
copy_molten_vk()

cook_scenes(
    name = "scenes",
    inputs = [
        "@gltf_sample_models//:a_beautiful_game_scene",
    ],
    outputs = [
        "a_beautiful_game.fscene",
    ],
)

glsl_shader(
    name = "unlit.vert.spv",
    src = "unlit.vert",
    deps = [
        "//demos/common:glsl_bindless"
    ],
)

glsl_shader(
    name = "unlit.frag.spv",
    src = "unlit.frag",
    deps = [
        "//demos/common:glsl_bindless"
    ],
)

cc_binary(
    name = "app",
    srcs = [
        "main.cpp",
    ],
    deps = [
        "//src/rhi:context",
        "//src/assets/scene:scene",
        "//src/utils:utils",
        "//demos/common:simple_camera_fps",
    ],
    data = [
        ":unlit.frag.spv",
        ":unlit.vert.spv",
        ":scenes",
    ] + select({
        "@fly//scripts/bazel/build_type:release": [
        ],
        "//conditions:default": [
            ":copy_vulkan_validation_layer",
        ],
    }) + select({
        "@platforms//os:osx": [
            ":copy_molten_vk",
	],
        "//conditions:default": [],
    }),
)

