load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")
load("@fly//scripts/bazel/rules:glslang.bzl", "glsl_shader")
load("@fly//scripts/bazel/rules:cook.bzl", "cook_images")
load("@fly//scripts/bazel/rules:common.bzl", "copy_vulkan_layers", "copy_molten_vk")
load("@fly//scripts/bazel/rules:copy_files_to_directory.bzl", "copy_files_to_directory")

copy_vulkan_layers()
copy_molten_vk()

cook_images(
    name = "cook_skyboxes",
    inputs = [
        "@debevec//:grace_probe_latlong.hdr",
        "@debevec//:rnl_probe_latlong.hdr",
        "@debevec//:stpeters_probe_latlong.hdr",
        "@debevec//:uffizi_probe_latlong.hdr",
    ],
    outputs = [
        "grace_cathedral.hdr",
        "eucalyptus_grove.hdr",
        "stpeters_basilica.hdr",
        "uffizi_gallery.hdr",
    ],
    eq2cube = True,
)

glsl_shader(
    name = "sample_cubemap.vert.spv",
    src = "sample_cubemap.vert",
    deps = [
        "//demos/common:glsl_bindless",
    ],
)

glsl_shader(
    name = "sample_cubemap.frag.spv",
    src = "sample_cubemap.frag",
    deps = [
        "//demos/common:glsl_bindless",
    ],
)

glsl_shader(
    name = "irradiance_slow.frag.spv",
    src = "irradiance_slow.frag",
    deps = [
        "//demos/common:glsl_bindless",
    ],
)

glsl_shader(
    name = "irradiance_sh.frag.spv",
    src = "irradiance_sh.frag",
    deps = [
        "//demos/common:glsl_bindless",
    ],
)

glsl_shader(
    name = "project_radiance_sh.comp.spv",
    src = "project_radiance_sh.comp",
    deps = [
        "//demos/common:glsl_bindless",
    ],
)

cc_binary(
    name = "app",
    srcs = [
        "main.cpp",
    ],
    deps = [
        "//src/rhi:context",
        "//src/utils:utils",
        "//demos/common:simple_camera_fps",
    ],
    data = [
        ":sample_cubemap.vert.spv",
        ":sample_cubemap.frag.spv",
        ":irradiance_slow.frag.spv",
        ":irradiance_sh.frag.spv",
        ":project_radiance_sh.comp.spv",
        ":cook_skyboxes",
    ] + select({
        "@fly//scripts/bazel/build_type:release": [
        ],
        "//conditions:default": [
            ":copy_vulkan_validation_layer",
        ],
    }),
)

